docs/spec/grammar/conformance/accept/09-trait.myc
// exercises: trait declaration (a set of fn signatures) with a type parameter
colony algebra

trait Negate<T> {
    fn negate(x: T) -> T
}
